adding stackoverflow links

--- a/barcode_detection.ipynb
+++ b/barcode_detection.ipynb
@@ -513,6 +513,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "How I resolved issues in code:\n",
+    "\n",
+    "https://stackoverflow.com/questions/14364563/minmaxloc-datatype/14365886#14365886\n",
+    "\n",
+    "https://stackoverflow.com/questions/25504964/opencv-python-valueerror-too-many-values-to-unpack"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
